# talent-plan-projects

exercises/: Cargo.toml  output.bson  output.json
kvs/: Cargo.toml  notes.md
kvs/benches/: engine_bench.rs
kvs/src/: client.rs  error.rs  kv.rs  lib.rs  server.rs
kvs/src/engines/: kv.rs  mod.rs  sled.rs
kvs/tests/: cli.rs  kv_store.rs
learning/: Cargo.toml  notes.md
learning/src/: example_builder.rs  flags.rs  lib.rs  sealed_trait.rs
